--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -42,5 +42,11 @@
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
     }
+  },
+  "hosting": {
+    "S3AndCloudFront": {
+      "providerPlugin": "awscloudformation",
+      "service": "S3AndCloudFront"
+    }
   }
 }
